--- a/front-end/src/index.html
+++ b/front-end/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style/style.css">
     <title>Sprint1</title>
 </head>
 <body>
@@ -38,6 +39,6 @@
 
         </div>
     </div>
-    <script src="./app/index.js"></script>
+    <script src="./app/index.js" type="module"></script>
 </body>
 </html>
