--- a/front-end/src/index.html
+++ b/front-end/src/index.html
@@ -24,20 +24,64 @@
 
     <div class="container-fluid">
 
-        <div class="product_card">
-            <h3 class="descuento">Descuento</h3>               
-            <img src="../../back-end/Imagenes/Productos/producto1-1.png" class="img_card" alt="...">
-            <section class="precios">
-                <p class="precio-des">$26.82/kg</p>
-                <p class="precio">$26.82/kg</p>
-            </section>
-            <p class="nombre">nombre</p>
-        </div>
+        <!-- Carrusel bootstrap-->
 
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="../../back-end/Imagenes/Productos/producto1-1.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>First slide label</h5>
+                  <p>Some representative placeholder content for the first slide.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="../../back-end/Imagenes/Productos/producto2-1.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Second slide label</h5>
+                  <p>Some representative placeholder content for the second slide.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="../../back-end/Imagenes/Productos/producto3-1.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Third slide label</h5>
+                  <p>Some representative placeholder content for the third slide.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="../../back-end/Imagenes/Productos/producto4-1.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Third slide label</h5>
+                  <p>Some representative placeholder content for the third slide.</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+
+        <!-- Fin Carrusel bootstrap-->
+
+        <!-- Carrito de compras-->
+          <div class="carrito"></div>
+          
+
+
+         <!-- Fin Carrito de compras-->
         <div class="grid-elementos" id="grid-elementos">
-
-
-
 
         </div>
     </div>
