--- a/front-end/src/index.html
+++ b/front-end/src/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../../back-end/Imagenes/Productos/producto1-1.png" class="d-block w-100" alt="...">
+                <a href="pages/productDetails.html"><img src="../../back-end/Imagenes/Productos/producto1-1.png" class="d-block w-100" alt="..."></a>
                 <div class="carousel-caption d-none d-md-block">
                   <h5>First slide label</h5>
                   <p>Some representative placeholder content for the first slide.</p>
