--- a/front-end/src/index.html
+++ b/front-end/src/index.html
@@ -10,81 +10,108 @@
     <title>Work Shop Principe Fresco</title>
 </head>
 <body>
-    <header id="header" class="header">
-        <section id="logo">
-            <h1>Principe Fresco</h1>
-        </section>
-        <nav id="navbar">
-            <ul>
-                <li>Ubicación</li>
-                <li>Carrito</li>
-            </ul>
-        </nav>
-    </header>
+  <header id="header" class="header">
+    <section id="logo">
+        <h1>Principe Fresco</h1>
+    </section>
+    <nav id="navbar1">
+        <ul>
+            <li>SHOP</li>
+            <li>COLLECTIONS</li>
+        </ul>
+    </nav>
+    <nav id="navbar">
+        <ul>
+            <li>
+                <a href="#">
+                    <img
+                      src="./assets/icons/users.svg"
+                      alt="_blank"
+                    />
+                  </a>
+            </li>
+            <li class="carrito">
+                <a href="#">
+                  <img
+                    src="./assets/icons/Vector.svg"
+                    alt="_blank"
+                  />
+                  <span id="number">0</span>
+                </a>
+              </li>
+        </ul>
+    </nav>
+    <section id="cart-box">
+        <h3>Tu carrito</h3>
 
-    <div class="container-fluid">
+        <span class="close"></span>
 
-        <!-- Carrusel bootstrap-->
+        <h3 id="total">Total: <span>$0</span></h3>
 
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <a href="pages/productDetails.html"><img src="../../back-end/Imagenes/Productos/producto1-1.png" class="d-block w-100" alt="..."></a>
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="../../back-end/Imagenes/Productos/producto2-1.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="../../back-end/Imagenes/Productos/producto3-1.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="../../back-end/Imagenes/Productos/producto4-1.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
-                </div>
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
+        <div id="cart-container"></div>
 
-        <!-- Fin Carrusel bootstrap-->
+        <button id="pay-btn">Proceder al pago</button>
+      </section>
+</header>
+<main id="mainIndex">
+  <div class="container-fluid">
 
-        <!-- Carrito de compras-->
-          <div class="carrito"></div>
-          
+    <!-- Carrusel bootstrap-->
 
-
-         <!-- Fin Carrito de compras-->
-        <div class="grid-elementos" id="grid-elementos">
-
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
         </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <a href="pages/productDetails.html"><img src="../../back-end/Imagenes/Productos/producto1-1.png" class="d-block w-100" alt="..."></a>
+            <div class="carousel-caption d-none d-md-block">
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="../../back-end/Imagenes/Productos/producto2-1.png" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="../../back-end/Imagenes/Productos/producto3-1.png" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="../../back-end/Imagenes/Productos/producto4-1.png" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
+    <!-- Fin Carrusel bootstrap-->
+
+    <!-- Carrito de compras-->
+      <div class="catalogo grid" id="catalogo"></div>
+      
+
+
+     <!-- Fin Carrito de compras-->
+    <div class="grid-elementos" id="grid-elementos">
+
     </div>
+</div>
+</main>
+
+
     <script src="./app/index.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
@@ -92,5 +119,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
     crossorigin="anonymous"></script>
+    <script src="./js/utilities.js"></script>
+    <script src="./js/products.js"></script>
+    <script src="./js/product.js"></script>
+    <script src="./js/catalog.js"></script>
+    <script src="./js/cart.js"></script>
 </body>
 </html>
